--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_appointments">My Appointments</string>
     <string name="title_profile">My Profile</string>
     <string name="collection_users">users</string>
+    <string name="collection_cities">cities</string>
+    <string name="preferences">THERAMENT_PREFERENCES</string>
+    <string name="collection_hospitals">hospitals</string>
 </resources>
