Implemented Email Service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="collection_timeslots">timeslots</string>
     <string name="collection_appointments">appointments</string>
     <string name="collection_times">times</string>
+    <string name="app_email">shubhamaajmane@gmail.com</string>
+    <string name="app_email_pass">Android@1999</string>
 </resources>
