--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="collection_times">times</string>
     <string name="app_email">shubhamaajmane@gmail.com</string>
     <string name="app_email_pass">Android@1999</string>
+    <string name="collection_history">history</string>
 </resources>
